# peacock

./: .gitignore  CLAUDE.md  Cargo.toml  rust-toolchain.toml
.claude/skills/peacock-platform/: CHANGELOG.md  SKILL.md
.claude/skills/peacock-platform/references/: 00-what-is-peacock.md  01-report-skills.md  02-documents-and-actions.md  03-integration-wiring.md  04-theming.md  05-test-harness.md
.github/workflows/: ci.yml  release.yml
crates/peacock-bin/: Cargo.toml
crates/peacock-bin/src/: author.rs  main.rs  manifest.rs
crates/peacock-bin/tests/: author.rs  lifecycle.rs
crates/peacock-core/: Cargo.toml
crates/peacock-core/src/: author.rs  compose.rs  data.rs  guardrail.rs  instance.rs  lib.rs  render.rs  saved.rs  skill.rs
crates/peacock-core/tests/: compose_unit.rs  data_northwind.rs  document_view.rs  embedded_face.rs  instance_card_png.rs  instance_timeline.rs  instance_views.rs  mosaic_northwind.rs  no_credential_surface.rs  render_northwind.rs  salesperson_leaderboard.rs  saved_instances.rs  shared_selection.rs  stat_compose.rs  stat_render_feature_off.rs  stat_render_ggplot.rs  supplier_lead_time.rs
crates/peacock-demo/: Cargo.toml
crates/peacock-demo/assets/: demo.html
crates/peacock-demo/src/: main.rs
crates/peacock-ggplot/: Cargo.toml
crates/peacock-ggplot/src/: adapter.rs  lib.rs
crates/peacock-ggplot/tests/: adapter.rs  dialect.rs  histogram.rs  theme.rs
crates/peacock-rasterizer/: Cargo.toml
crates/peacock-rasterizer/assets/: FONT-LICENSE.txt
crates/peacock-rasterizer/examples/: sample.rs  theme_gallery.rs
crates/peacock-rasterizer/src/: card.rs  dashboard.rs  lib.rs  logo.rs  raster.rs  theme_apply.rs  vegalite_svg.rs
crates/peacock-rasterizer/src/vegalite/: axes.rs  data.rs  layout.rs  legend.rs  marks.rs  mod.rs  parse.rs  scales.rs  svgutil.rs  transforms.rs  unit.rs
crates/peacock-rasterizer/tests/: dashboard.rs  logo.rs  parity.rs  rasterize.rs  themed.rs
crates/peacock-server/: Cargo.toml
crates/peacock-server/assets/: flutter-shim.html  iframe.html
crates/peacock-server/src/: http.rs  lib.rs  mcp.rs  upstream.rs
crates/peacock-server/tests/: http_surface.rs  mcp_surface.rs  parity.rs  rasterize_delegate.rs  triton_upstream.rs
crates/peacock-test-support/: Cargo.toml
crates/peacock-test-support/src/: deliveries.rs  lib.rs  northwind.rs  process.rs
crates/peacock-test-support/tests/: spawn_with.rs
crates/peacock-theme/: Cargo.toml
crates/peacock-theme/assets/brands/: company-a.css  company-b.css
crates/peacock-theme/assets/hosts/: copilot.css  gemini.css  whatsapp.css
crates/peacock-theme/src/: lib.rs  registry.rs
crates/peacock-theme/tests/: theme.rs
crates/peacock-types/: Cargo.toml
crates/peacock-types/src/: artifact.rs  error.rs  lib.rs  params.rs  principal.rs  selection.rs  stat.rs
crates/peacock-types/tests/: stat_spec.rs  types_contract.rs
doc/: BRD.md  HLD.md  flutter-iframe-runtime-proposal.md  paper.md  theming.md  triton-mcp-apps-proxying-issue.md
doc/notes/discovered/: 2026-06-27-escurel-date-serialization.md  2026-06-27-rasterizer-sidecar-dep-conflict.md  2026-06-28-mosaic-mode.md  2026-06-28-skill-wikilink-resolution.md  2026-07-04-list-events-processed-only.md  2026-07-05-ggplot-rs-grouping-gaps.md
fixtures/deliveries/: gen.sql
fixtures/deliveries/supplier_deliveries/: data.parquet
fixtures/northwind/: gen.sql
fixtures/northwind/order_lines/: data.parquet
web/peacock-web/: README.md  build_web.sh  pubspec.yaml
web/peacock-web/lib/: main.dart  mcp_bridge.dart  mcp_bridge_stub.dart  mcp_bridge_web.dart
web/peacock-web/test/: widget_test.dart
web/peacock-web/web/: index.html  manifest.json
