[package]
name = "peacock-bin"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "peacock"
path = "src/main.rs"

[dependencies]
peacock-types = { workspace = true }
peacock-core = { workspace = true }
peacock-server = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
