[package]
name = "peacock-core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# The pluggable statistical render backend (issue #6): compiles the
# plotters/ggplot-rs graph and dispatches STATISTICAL specs (top-level
# `geom`) to it. Off by default — the base build and the Vega-Lite path are
# unchanged without it.
ggplot = ["dep:peacock-ggplot"]

[dependencies]
peacock-types = { workspace = true }
peacock-rasterizer = { workspace = true }
peacock-ggplot = { workspace = true, optional = true }
escurel-client = { workspace = true }
escurel-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
peacock-test-support = { path = "../peacock-test-support" }
escurel-test-support = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
