[package]
name = "peacock-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
peacock-types = { workspace = true }
peacock-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
peacock-test-support = { path = "../peacock-test-support" }
escurel-test-support = { workspace = true }
triton-tests = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
