[package]
name = "peacock-server"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
peacock-types = { workspace = true }
peacock-core = { workspace = true }
peacock-rasterizer = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
# The demo render path mirrors a call through a real Triton to capture the
# genuine dispatch for the inspector (no-op when no Triton is wired).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
peacock-test-support = { path = "../peacock-test-support" }
peacock-rasterizer = { workspace = true }
escurel-test-support = { workspace = true }
triton-tests = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tempfile = { workspace = true }
